add script for inference on dispersal data

--- a/ms/PSHBRefs.bib
+++ b/ms/PSHBRefs.bib
@@ -17,6 +17,23 @@
   file = {/Users/293003c/Zotero/storage/MA9M463Z/Abarca et al. - 2024 - How development and survival combine to determine .pdf}
 }
 
+@article{callaghan2024,
+  title = {Response to the Detection of {{Fusarium}} Dieback Associated with Ambrosia Beetles on {{Acer}} Negundo in {{New South Wales}}},
+  author = {Callaghan, Sophia and Carnegie, Angus J. and Gillespie, Peter and Mulholland, Shannon and Nagel, Matthew and Sargeant, David and Daly, Andrew and Wildman, Ossie},
+  year = {2024},
+  month = jul,
+  journal = {Australasian Plant Pathology},
+  volume = {53},
+  number = {4},
+  pages = {345--352},
+  issn = {1448-6032},
+  doi = {10.1007/s13313-024-00984-6},
+  urldate = {2024-11-17},
+  abstract = {Symptoms consistent with polyphagous shot hole borer (Euwallacea fornicatus) and Fusarium dieback (Fusarium euwallaceae), recognised as high priority environmental pests for Australia, were observed on a single box elder (Acer negundo) tree in Sydney, New South Wales, in March 2022 during routine forest biosecurity surveillance. Delimiting surveys were undertaken around the Sydney basin, extending radially from the original box elder, resulting in the detection of a further three box elder and one tuckeroo (Cupaniopsis anacardioides) with suspicious symptoms. Samples were taken from the five trees and associated beetles diagnosed using morphological and molecular methods. Associated Fusarium-like fungi were identified according to phylogenetic inference using regions of the internal transcribed spacer, as well as the translation elongation factor 1-{$\alpha$} and RNA polymerase II genes. The tea shot hole borer, Euwallacea perbrevis, was identified along with its known fungal mutualist, Fusarium obliquiseptatum. This pair have been reported in Queensland on avocado (Persea americana) and tuckeroo, and there are unpublished records of E. perbrevis from northern NSW, but this is the first report of both species occurring simultaneously in NSW. The biosecurity response following the initial detection, including the establishment of an Incident Management Team, surveillance, diagnostics, and stakeholder engagement, is discussed. This paper highlights the importance of surveillance for early detection of invasive pests and biosecurity systems and processes for enabling a timely response.},
+  langid = {english},
+  keywords = {Biosecurity,Euwallacea fornicatus,Fusarium obliquiseptatum,Invasive,Surveillance}
+}
+
 @article{campbell1974,
   title = {Temperature {{Requirements}} of {{Some Aphids}} and {{Their Parasites}}},
   author = {Campbell, A. and Frazer, B. D. and Gilbert, N. and Gutierrez, A. P. and Mackauer, M.},
@@ -36,6 +53,24 @@
 }
 
 @article{cook2023,
+  title = {Economic Impact of Polyphagous Shot Hole Borer {{Euwallacea}} Fornicatus ({{Coleoptera}}: {{Curculionidae}}: {{Scolytinae}}) in {{Western Australia}}},
+  shorttitle = {Economic Impact of Polyphagous Shot Hole Borer {{Euwallacea}} Fornicatus ({{Coleoptera}}},
+  author = {Cook, David C. and Broughton, Sonya},
+  year = {2023},
+  journal = {Agricultural and Forest Entomology},
+  volume = {25},
+  number = {3},
+  pages = {449--457},
+  issn = {1461-9563},
+  doi = {10.1111/afe.12566},
+  urldate = {2024-06-21},
+  abstract = {Following the discovery of polyphagous shot hole borer Euwallacea fornicatus (Eichhoff) in Western Australia in September 2021, we estimated the likely economic damage that will result in the coming decades and the return on investment in eradication. A bioeconomic model was used to simulate the insect's spread and economic impact based on additional urban and commercial tree management costs. Two scenarios were examined, one in which an eradication policy response was initiated, and one in which it was not. With no eradication response, results indicated that median costs would reach A{\textbackslash}6.8 million per annum in 30 years, with 98\% of these costs relating to management in urban forests. We conclude that the eradication funding currently proposed, involving an investment of A{\textbackslash}45.0 million over 3 years, will not generate sufficient benefits to offset costs in the short-term, but may produce net benefits in the longer term.},
+  langid = {english},
+  keywords = {benefit cost analysis,pest management,polyphagous shot hole borer,urban pest},
+  file = {/Users/293003c/Zotero/storage/DBTXTXW8/Cook and Broughton - 2023 - Economic impact of polyphagous shot hole borer Euw.pdf;/Users/293003c/Zotero/storage/IGVTAJHS/afe.html}
+}
+
+@article{cook2023a,
   title = {Cost Effectiveness of Spread Mitigation Strategies for Polyphagous Shot Hole Borer {{Euwallacea}} Fornicatus ({{Coleoptera}}: {{Curculionidae}}: {{Scolytinae}})},
   shorttitle = {Cost Effectiveness of Spread Mitigation Strategies for Polyphagous Shot Hole Borer {{Euwallacea}} Fornicatus ({{Coleoptera}}},
   author = {Cook, David C. and Gardiner, Peter S. and Broughton, Sonya},
@@ -136,6 +171,40 @@
   langid = {english},
   keywords = {Conceptual framework,Dispersal patterns and processes,Empirical and mechanistic models,Migration,Movement,Serial and parallel processes},
   file = {/Users/293003c/Zotero/storage/UC6SJFV2/Jongejans et al. - 2015 - A unifying gravity framework for dispersal.pdf}
+}
+
+@article{neethling2024,
+  title = {Early Impact Assessment of the Paninvasive Polyphagous Shot Hole Borer Beetle on Commercial Pear Production},
+  author = {Neethling, Emma C. and Engelbrecht, Karyn and Roets, Francois and Crous, Casparus J.},
+  year = {2024},
+  journal = {Entomologia Experimentalis et Applicata},
+  volume = {172},
+  number = {9},
+  pages = {796--805},
+  issn = {1570-7458},
+  doi = {10.1111/eea.13466},
+  urldate = {2024-11-17},
+  abstract = {The polyphagous shot hole borer (PSHB) beetle, Euwallacea fornicatus (Eichhoff) (Coleoptera: Curculionidae, Scolytinae), and its phytopathogenic fungal symbiont (Fusarium euwallaceae Freeman et al.) threaten commercial and urban tree species worldwide. This pest--fungus complex has been newly discovered in the commercial deciduous fruit industry (Western Cape, South Africa), where its effect is still unknown. This study explored the impact of PSHB infestation on fruit quality and plant water-use efficiency (WUE) -- as indicated by carbon and nitrogen stable isotope ratios -- of commercially cultivated Packham's Triumph pear trees within the first year of invasion, as well as changes in phenotypic plasticity (trait expression range). The impact of PSHB infestation is currently most evident in fruit quality traits, with a clear distinction between the control and most densely attacked tree categories. Fruit and leaf traits showed high variation and a significant change in phenotypic plasticity. Increased PSHB attack density was associated with smaller, duller-toned, sweeter fruit at the time of harvest and data tended towards reduced plant WUE. Producers can expect significant variation in fruit quality and plant WUE even in hosts without branch dieback, visible plant stress or extensive beetle breeding, especially in orchards where infestations persist beyond the first year. These findings necessitate additional research to describe the long-term impact, examine the threat to other deciduous fruit crops and cultivars and assess the need for adapted management or harvesting methods.},
+  copyright = {{\copyright} 2024 The Authors. Entomologia Experimentalis et Applicata published by John Wiley \& Sons Ltd on behalf of Netherlands Entomological Society.},
+  langid = {english},
+  keywords = {ambrosia beetle,Coleoptera,Curculionidae,deciduous fruit,Euwallacea fornicatus,fruit quality,Fusarium euwallaceae,Packham's Triumph,PSHB,Pyrus communis,Scolytinae,stable isotope analysis},
+  file = {/Users/293003c/Zotero/storage/WNPY8PBP/Neethling et al. - 2024 - Early impact assessment of the paninvasive polypha.pdf;/Users/293003c/Zotero/storage/VLG2PWYD/eea.html}
+}
+
+@article{pienaar2025,
+  title = {Acclimation Effects on Thermal Locomotor Performance of the Invasive {{Polyphagous Shot Hole Borer}} Beetle, {{{\emph{Euwallacea}}}}{\emph{ Fornicatus}} ({{Coleoptera}}: {{Curculionidae}}: {{Scolytinae}})},
+  shorttitle = {Acclimation Effects on Thermal Locomotor Performance of the Invasive {{Polyphagous Shot Hole Borer}} Beetle, {{{\emph{Euwallacea}}}}{\emph{ Fornicatus}} ({{Coleoptera}}},
+  author = {Pienaar, Madeleine and Bierman, Anandi and Roets, Francois and Terblanche, John S.},
+  year = {2025},
+  month = feb,
+  journal = {Journal of Thermal Biology},
+  pages = {104068},
+  issn = {0306-4565},
+  doi = {10.1016/j.jtherbio.2025.104068},
+  urldate = {2025-02-17},
+  abstract = {The Polyphagous Shot Hole Borer (PSHB; Euwallacea fornicatus, Coleoptera: Curculionidae: Scolytinae) is an invasive and destructive tree pest. To assess whether thermal acclimation influences E. fornicatus locomotion performance (i.e., induced plastic responses) that may influence invasion potential, beetles were acclimated to three temperatures (18{$^\circ$}C, 25{$^\circ$}C, and 32{$^\circ$}C), and walking speed was measured across six temperatures (13{$^\circ$}C, 18{$^\circ$}C, 23{$^\circ$}C, 28{$^\circ$}C, 33{$^\circ$}C and 38{$^\circ$}C) per acclimation group to construct thermal performance curves, capturing critical thermal minimum (Tmin), critical thermal maximum (Tmax), thermal breadth (Tbr), optimal performance rate (Umax), across four locomotion traits. We found substantial plasticity of performance curves in E. fornicatus. Generally, cold (18{$^\circ$}C) acclimation increased the thermal range of several locomotor performance traits without affecting performance levels, thereby supporting the colder-is-better hypothesis. To assess the consequences of these plastic responses, using the thermal performance curves established here, movement rates of E. fornicatus in an at-risk orchard area in South Africa were predicted across seasons and considering artificial warm and cold spells. Cold-acclimated beetles exhibited the highest cumulative distance traveled in both summer and winter, while warm-acclimated beetles had the lowest. Therefore, short-term thermal variation significantly influenced E. fornicatus locomotion performance, with cold acclimation notably improving dispersal across a wide range of thermal conditions. These findings highlight the importance of considering recent thermal history when predicting E. fornicatus invasion potential. By integrating these data with microclimatic conditions and functional models, this study offers valuable insights for predicting E. fornicatus spread, informing targeted management strategies, and refining spatially explicit risk assessments to mitigate the impacts of this invasive pest.},
+  keywords = {Acclimation,Dispersal,Invasion,Invasiveness,Locomotion,Seasonality,Spread rates,Thermal performance},
+  file = {/Users/293003c/Zotero/storage/BPKVL6YY/S0306456525000257.html}
 }
 
 @article{rosenbaum2019,
